tests/ui/attributes/doc-test-literal.stderr
error[E0565]: malformed `doc` attribute input
  --> $DIR/doc-test-literal.rs:1:1
   |
LL | #![doc(test(""))]
   | ^^^^^^^^^^^^--^^^
   |             |
   |             didn't expect a literal here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0565`.
