tests/ui/attributes/doc-test-literal.rs
#![doc(test(""))]
//~^ ERROR malformed `doc` attribute input

fn main() {}
